# zynth53

./: .clang-format  .gitmodules  .pre-commit-config.yaml  Doxyfile  LICENSE  meson.build
.github/workflows/: qa.yaml
include/: si5351.h
src/: meson.build  si5351.c
tests/: meson.build  test_si5351.cc
